--- a/src/react/styles/components/WitchMap.scss
+++ b/src/react/styles/components/WitchMap.scss
@@ -6,7 +6,8 @@
 #witch {
   position: absolute;
   z-index: 2;
-  bottom: 10px;
+  margin-top: -70px;
+  top: 50%;
   left: 50%;
   margin-left: -35px;
   width: 70px;
