--- a/src/react/styles/app.scss
+++ b/src/react/styles/app.scss
@@ -6,4 +6,6 @@
 @include foundation-everything;
 
 //Burger menu
-@import 'components/WitchMap'
+@import 'components/WitchMap';
+@import 'components/Dashboard';
+@import 'components/Clock';
