Movie list finalozed at the bottom
Closes #7.

--- a/src/react/styles/components/Dashboard.scss
+++ b/src/react/styles/components/Dashboard.scss
@@ -7,10 +7,17 @@
 .points-container {
   .points {
      font-size: 400%;
-     text-align: right;
+     text-align: center;
   }
 
   .text {
-    text-align: right;
+    text-align: center;
+    color: #dce3ef;
   }
+}
+
+.info {
+  color: #dce3ef;
+  font-size: 200%;
+  text-align: center;
 }
