Storyline added to the console
Instead of a fancy fadein effect, the story is in the console.
Frontend prettifying, new fonts, css changes.

Closes #10.

--- a/src/react/styles/app.scss
+++ b/src/react/styles/app.scss
@@ -10,3 +10,6 @@
 @import 'components/Dashboard';
 @import 'components/Clock';
 @import 'components/MovieList';
+
+//Clock and Counter font
+@import url('https://fonts.googleapis.com/css?family=Coiny|Slabo+27px');
