--- a/src/react/styles/components/Dashboard.scss
+++ b/src/react/styles/components/Dashboard.scss
@@ -5,18 +5,21 @@
 }
 
 .points-container {
+  font-family: 'Coiny', cursive;
   .points {
      font-size: 400%;
      text-align: center;
+     margin-bottom: -16px;
   }
 
   .text {
     text-align: center;
-    color: #dce3ef;
+    color: #fc730a;
   }
 }
 
 .info {
+  margin-top: 100px;
   color: #dce3ef;
   font-size: 200%;
   text-align: center;
